[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "tapsimple"
version = "0.0.1"
description = "This is a module for Python that emits TAP (= the Test Anything Protocol)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rjbs/tapsimple"
Issues = "https://github.com/rjbs/tapsimple/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/TAP"]
